--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="text-black bg-white dark:bg-slate-800 dark:text-white font-serif"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
