--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body>
-    <div id="root" class="text-black bg-white dark:bg-slate-800 dark:text-white font-serif"></div>
+  <body class="text-black bg-white dark:bg-black dark:text-white">
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
